--- a/docs/vite-manifest.json
+++ b/docs/vite-manifest.json
@@ -7,6 +7,10 @@
     "file": "_app/immutable/assets/logo-c6431890.png",
     "src": "src/lib/images/logo.png"
   },
+  "src/lib/images/homeMarker.png": {
+    "file": "_app/immutable/assets/homeMarker-fcf55dba.png",
+    "src": "src/lib/images/homeMarker.png"
+  },
   "src/lib/images/GitHub-Mark-120px-plus.png": {
     "file": "_app/immutable/assets/GitHub-Mark-120px-plus-78981108.png",
     "src": "src/lib/images/GitHub-Mark-120px-plus.png"
@@ -20,12 +24,12 @@
     "src": "src/lib/images/warning.png"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-c036fb75.js",
+    "file": "_app/immutable/start-02a6d841.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-d1dd279f.js",
-      "_singletons-13400006.js",
+      "_singletons-b52f9a50.js",
       "_paths-6cd3a76e.js"
     ],
     "dynamicImports": [
@@ -39,30 +43,30 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-972d113e.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-e7a8047a.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-d1dd279f.js",
-      "_stores-9a0ddd84.js",
+      "_stores-0bae7fa1.js",
       "_logo-ec041307.js",
-      "_data-fc90fb40.js",
+      "_data-e06c757f.js",
       "_paths-6cd3a76e.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-8f482310.css"
+      "_app/immutable/assets/_layout-6f9e7e0c.css"
     ],
     "assets": [
       "_app/immutable/assets/warning-4963f440.png"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-b73a7f56.js",
+    "file": "_app/immutable/components/error.svelte-0274ee76.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-d1dd279f.js",
-      "_stores-9a0ddd84.js"
+      "_stores-0bae7fa1.js"
     ]
   },
   "src/routes/+page.svelte": {
@@ -89,16 +93,19 @@
     ]
   },
   "src/routes/app/+page.svelte": {
-    "file": "_app/immutable/components/pages/app/_page.svelte-307d9daa.js",
+    "file": "_app/immutable/components/pages/app/_page.svelte-3e76dda0.js",
     "src": "src/routes/app/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-d1dd279f.js",
-      "_singletons-13400006.js",
-      "_data-fc90fb40.js"
+      "_singletons-b52f9a50.js",
+      "_data-e06c757f.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-c393a8fd.css"
+      "_app/immutable/assets/_page-b6c7ddf7.css"
+    ],
+    "assets": [
+      "_app/immutable/assets/homeMarker-fcf55dba.png"
     ]
   },
   "src/routes/app/how-to-play/+page.svelte": {
@@ -165,8 +172,8 @@
       "__page-f115d727.js"
     ]
   },
-  "_singletons-13400006.js": {
-    "file": "_app/immutable/chunks/singletons-13400006.js",
+  "_singletons-b52f9a50.js": {
+    "file": "_app/immutable/chunks/singletons-b52f9a50.js",
     "imports": [
       "_index-d1dd279f.js",
       "_paths-6cd3a76e.js"
@@ -178,11 +185,11 @@
   "_index-d1dd279f.js": {
     "file": "_app/immutable/chunks/index-d1dd279f.js"
   },
-  "_stores-9a0ddd84.js": {
-    "file": "_app/immutable/chunks/stores-9a0ddd84.js",
+  "_stores-0bae7fa1.js": {
+    "file": "_app/immutable/chunks/stores-0bae7fa1.js",
     "imports": [
       "_index-d1dd279f.js",
-      "_singletons-13400006.js"
+      "_singletons-b52f9a50.js"
     ]
   },
   "_logo-ec041307.js": {
@@ -191,10 +198,10 @@
       "_app/immutable/assets/logo-0da374d1.webp"
     ]
   },
-  "_data-fc90fb40.js": {
-    "file": "_app/immutable/chunks/data-fc90fb40.js",
+  "_data-e06c757f.js": {
+    "file": "_app/immutable/chunks/data-e06c757f.js",
     "imports": [
-      "_singletons-13400006.js"
+      "_singletons-b52f9a50.js"
     ]
   },
   "_logo-9f233c75.js": {
@@ -231,7 +238,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-d817d456.js",
+    "file": "_app/immutable/chunks/0-71729551.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -239,7 +246,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-2e036bc9.js",
+    "file": "_app/immutable/chunks/1-5d3a5928.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -265,7 +272,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-90544dcf.js",
+    "file": "_app/immutable/chunks/4-337ae4a5.js",
     "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
@@ -291,20 +298,20 @@
       "src/routes/app/leaderboard/+page.svelte"
     ]
   },
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-f0049bf9.css",
+    "src": "src/routes/+page.css"
+  },
   "src/routes/app/+page.css": {
-    "file": "_app/immutable/assets/_page-c393a8fd.css",
+    "file": "_app/immutable/assets/_page-b6c7ddf7.css",
     "src": "src/routes/app/+page.css"
   },
   "src/routes/app/how-to-play/+page.css": {
     "file": "_app/immutable/assets/_page-61d5a6c4.css",
     "src": "src/routes/app/how-to-play/+page.css"
   },
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-f0049bf9.css",
-    "src": "src/routes/+page.css"
-  },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-8f482310.css",
+    "file": "_app/immutable/assets/_layout-6f9e7e0c.css",
     "src": "src/routes/+layout.css"
   }
 }
